src/test/ui/compile-fail-migration/associated-types/cache/elision.stderr
error: compilation successful
  --> $DIR/elision.rs:34:1
   |
LL | fn main() { } //~ ERROR compilation successful
   | ^^^^^^^^^^^^^

error: aborting due to previous error

